# obs-cga-filter

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  build-linux.sh
.github/workflows/: build.yml
data/locale/: en-US.ini
data/shaders/: cga-dither.effect
src/: cga-filter.c
tools/: Dockerfile.demo  make_demo.py  make_demo.sh
